--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#josh-cesana-cover {
+  background-image: url("https://i.imgur.com/J4idLUl.jpg");
+}
+
+#josh-cesana-card {
+  background-image: url("https://i.imgur.com/5qgqTm6.jpg");
+}
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
